@@ -7,6 +7,7 @@
 - updated: `F.worker2()` returns entire `stdout` buffer in the `callback(err, buffer)`
 
 - fixed: system routing
+- fixed: NoSQL sorting, solved a strange problem
 
 ======= 3.1.0
 
